[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/web_pages/editor/PageEntryEditor.gd" type="Script" id=1]

[node name="Entry" type="PanelContainer"]
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 39.0

[node name="MainContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1010.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 1010.0
margin_bottom = 8.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 1010.0
margin_bottom = 32.0
alignment = 1

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 414.0
margin_right = 451.0
margin_bottom = 20.0
text = "Add"

[node name="UpButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 455.0
margin_right = 485.0
margin_bottom = 20.0
text = "Up"

[node name="DownButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 489.0
margin_right = 537.0
margin_bottom = 20.0
text = "Down"

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 541.0
margin_right = 596.0
margin_bottom = 20.0
text = "Delete"
